chore: fix various small stuf, implement infinite scroll for neighbors and review auth flow

--- a/webapp/front/front/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
+++ b/webapp/front/front/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
@@ -20,7 +20,7 @@
 
           <!-- If amenities are available -->
           <div *ngIf="amenities?.length > 0">
-            <h2>Make Reservation</h2>
+            <h2>Make a Reservation</h2>
             <div class="divider"></div>
 
             <form [formGroup]="reservationForm" (ngSubmit)="onSubmit()">
