--- a/webapp/front/front/src/assets/styles/service.css
+++ b/webapp/front/front/src/assets/styles/service.css
@@ -1,5 +1,4 @@
 .service-card {
-
   overflow: hidden;
   width: 100%;
   display: flex;
@@ -20,7 +19,6 @@
       object-position: center bottom;
       width: 100%;
       max-height: 30vh;
-
     }
   }
 
@@ -48,7 +46,8 @@
 
     & .inner {
       position: relative;
-      margin-top: 50px;
+      padding-top: 2em;
+      margin: 4em;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -104,9 +103,9 @@
     height: 110%;
     bottom: -5px;
     left: 0;
-    -webkit-transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
-    -o-transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
-    transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
+    -webkit-transition: bottom 0.3s cubic-bezier(0.5, 2.5, 0.7, 0.7);
+    -o-transition: bottom 0.3s cubic-bezier(0.5, 2.5, 0.7, 0.7);
+    transition: bottom 0.3s cubic-bezier(0.5, 2.5, 0.7, 0.7);
     pointer-events: none;
   }
 
@@ -126,7 +125,11 @@
       position: absolute;
       border-radius: 50%;
       border: 6px solid var(--onbackground);
-      background-image: linear-gradient(-60deg, var(--old-primary) 0%, var(--primary) 100%);
+      background-image: linear-gradient(
+        -60deg,
+        var(--old-primary) 0%,
+        var(--primary) 100%
+      );
       top: 15px;
       left: 100px;
     }
@@ -170,7 +173,6 @@
     }
   }
 
-
   & .portada {
     width: 100%;
     height: 100%;
@@ -186,7 +188,6 @@
   }
 
   & .background-cover {
-
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -199,10 +200,8 @@
   }
 }
 
-
 /*--------------------------tabbed box ---------------*/
 .tabbed-box {
-
   & section {
     background-color: var(--onbackground);
     display: none;
@@ -214,10 +213,11 @@
     z-index: -1;
     transform: translateY(-4px);
     box-shadow: 0 4px 0 0 var(--primary);
-    border-radius: 0 var(--border-radius) var(--border-radius) var(--border-radius);
+    border-radius: 0 var(--border-radius) var(--border-radius)
+      var(--border-radius);
   }
 
-  & input[type=radio] {
+  & input[type="radio"] {
     display: none;
   }
 
@@ -241,16 +241,13 @@
       margin-right: 10px;
     }
 
-
     &:hover {
       color: var(--old-primary);
       cursor: pointer;
     }
-
   }
 
-
-  & input:checked+label {
+  & input:checked + label {
     color: var(--primary);
     z-index: 2;
     border-left: 1px solid var(--primary);
@@ -259,13 +256,12 @@
     border-bottom: 2px solid transparent;
   }
 
-  & #tab1:checked~#content1,
-  & #tab2:checked~#content2,
-  & #tab3:checked~#content3,
-  & #tab4:checked~#content4 {
+  & #tab1:checked ~ #content1,
+  & #tab2:checked ~ #content2,
+  & #tab3:checked ~ #content3,
+  & #tab4:checked ~ #content4 {
     display: flex;
   }
-
 
   & #content1 {
     & .container {
@@ -286,7 +282,6 @@
   }
 
   & .background-cover {
-
     width: 100%;
     height: 100px;
     object-fit: cover;
@@ -298,7 +293,6 @@
     background-size: cover;
   }
 }
-
 
 .stars {
   display: flex;
